// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Modal matches the snapshot 1`] = `
<inject-MenuModal-with-store
  isOpen={false}
  onClosed={[MockFunction]}
  store={
    store {
      "closeAllModals": [MockFunction],
      "db": Object {
        "transaction": [MockFunction],
      },
      "getPermutatedWords": [MockFunction],
      "isAboutModalOpen": false,
      "isInstructionsModalOpen": false,
      "isMenuModalOpen": false,
      "letters": "         ",
      "loading": false,
      "nav": Object {
        "get": [Function],
        "goto": [Function],
        "resetto": [Function],
      },
      "navigator": Object {},
      "newGameOptions": Object {
        "timed": false,
        "wordRange": Object {
          "max": 49,
          "min": 10,
        },
      },
      "orientation": 0,
      "scored": false,
      "scores": Array [
        Object {
          "percent": 100,
        },
        Object {
          "percent": 85,
        },
        Object {
          "percent": 65,
        },
        Object {
          "percent": 40,
        },
        Object {
          "percent": 0,
        },
      ],
      "selected": Array [],
      "shuffle": [MockFunction],
      "statusText": "",
      "timer": -1,
      "tried": Object {},
      "width": 320,
      "words": Object {},
    }
  }
>
  <MenuModal
    isOpen={false}
    onClosed={[MockFunction]}
    store={
      store {
        "closeAllModals": [MockFunction],
        "db": Object {
          "transaction": [MockFunction],
        },
        "getPermutatedWords": [MockFunction],
        "isAboutModalOpen": false,
        "isInstructionsModalOpen": false,
        "isMenuModalOpen": false,
        "letters": "         ",
        "loading": false,
        "nav": Object {
          "get": [Function],
          "goto": [Function],
          "resetto": [Function],
        },
        "navigator": Object {},
        "newGameOptions": Object {
          "timed": false,
          "wordRange": Object {
            "max": 49,
            "min": 10,
          },
        },
        "orientation": 0,
        "scored": false,
        "scores": Array [
          Object {
            "percent": 100,
          },
          Object {
            "percent": 85,
          },
          Object {
            "percent": 65,
          },
          Object {
            "percent": 40,
          },
          Object {
            "percent": 0,
          },
        ],
        "selected": Array [],
        "shuffle": [MockFunction],
        "statusText": "",
        "timer": -1,
        "tried": Object {},
        "width": 320,
        "words": Object {},
      }
    }
  >
    <ModalBox
      animationDuration={400}
      backButtonClose={true}
      backdrop={true}
      backdropColor="black"
      backdropContent={null}
      backdropOpacity={0.5}
      backdropPressToClose={true}
      coverScreen={false}
      easing={[Function]}
      entry="bottom"
      isOpen={false}
      keyboardTopOffset={22}
      onClosed={[MockFunction]}
      position="center"
      startOpen={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        }
      }
      swipeThreshold={50}
      swipeToClose={true}
    >
      <View>
        <react-native-mock />
      </View>
    </ModalBox>
  </MenuModal>
</inject-MenuModal-with-store>
`;

exports[`Menu Modal matches the snapshot 2`] = `
<inject-MenuModal-with-store
  isOpen={true}
  onClosed={[MockFunction]}
  store={
    store {
      "closeAllModals": [MockFunction],
      "db": Object {
        "transaction": [MockFunction],
      },
      "getPermutatedWords": [MockFunction],
      "isAboutModalOpen": false,
      "isInstructionsModalOpen": false,
      "isMenuModalOpen": false,
      "letters": "         ",
      "loading": false,
      "nav": Object {
        "get": [Function],
        "goto": [Function],
        "resetto": [Function],
      },
      "navigator": Object {},
      "newGameOptions": Object {
        "timed": false,
        "wordRange": Object {
          "max": 49,
          "min": 10,
        },
      },
      "orientation": 0,
      "scored": false,
      "scores": Array [
        Object {
          "percent": 100,
        },
        Object {
          "percent": 85,
        },
        Object {
          "percent": 65,
        },
        Object {
          "percent": 40,
        },
        Object {
          "percent": 0,
        },
      ],
      "selected": Array [],
      "shuffle": [MockFunction],
      "statusText": "",
      "timer": -1,
      "tried": Object {},
      "width": 320,
      "words": Object {},
    }
  }
>
  <MenuModal
    isOpen={true}
    onClosed={[MockFunction]}
    store={
      store {
        "closeAllModals": [MockFunction],
        "db": Object {
          "transaction": [MockFunction],
        },
        "getPermutatedWords": [MockFunction],
        "isAboutModalOpen": false,
        "isInstructionsModalOpen": false,
        "isMenuModalOpen": false,
        "letters": "         ",
        "loading": false,
        "nav": Object {
          "get": [Function],
          "goto": [Function],
          "resetto": [Function],
        },
        "navigator": Object {},
        "newGameOptions": Object {
          "timed": false,
          "wordRange": Object {
            "max": 49,
            "min": 10,
          },
        },
        "orientation": 0,
        "scored": false,
        "scores": Array [
          Object {
            "percent": 100,
          },
          Object {
            "percent": 85,
          },
          Object {
            "percent": 65,
          },
          Object {
            "percent": 40,
          },
          Object {
            "percent": 0,
          },
        ],
        "selected": Array [],
        "shuffle": [MockFunction],
        "statusText": "",
        "timer": -1,
        "tried": Object {},
        "width": 320,
        "words": Object {},
      }
    }
  >
    <ModalBox
      animationDuration={400}
      backButtonClose={true}
      backdrop={true}
      backdropColor="black"
      backdropContent={null}
      backdropOpacity={0.5}
      backdropPressToClose={true}
      coverScreen={false}
      easing={[Function]}
      entry="bottom"
      isOpen={true}
      keyboardTopOffset={22}
      onClosed={[MockFunction]}
      position="center"
      startOpen={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "justifyContent": "center",
        }
      }
      swipeThreshold={50}
      swipeToClose={true}
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "zIndex": 2,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <react-native-mock>
          <View
            onLayout={[Function]}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <react-native-mock>
              <TouchableWithoutFeedback
                onPress={[Function]}
              >
                <react-native-mock>
                  <AnimatedComponent
                    style={
                      Array [
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "opacity": AnimatedValue {
                            "_animation": null,
                            "_children": Array [],
                            "_listeners": Object {},
                            "_offset": 0,
                            "_value": 0,
                          },
                        },
                      ]
                    }
                  >
                    <View>
                      <react-native-mock>
                        <View
                          style={
                            Array [
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              Object {
                                "backgroundColor": "black",
                                "opacity": 0.5,
                              },
                            ]
                          }
                        >
                          <react-native-mock />
                        </View>
                      </react-native-mock>
                    </View>
                  </AnimatedComponent>
                </react-native-mock>
              </TouchableWithoutFeedback>
              <AnimatedComponent
                onLayout={[Function]}
                onMoveShouldSetResponder={[Function]}
                onMoveShouldSetResponderCapture={[Function]}
                onResponderEnd={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderReject={[Function]}
                onResponderRelease={[Function]}
                onResponderStart={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                onStartShouldSetResponderCapture={[Function]}
                style={
                  Array [
                    Object {
                      "backgroundColor": "white",
                    },
                    Object {
                      "height": 768,
                      "width": 320,
                    },
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    },
                    Object {
                      "transform": Array [
                        Object {
                          "translateY": AnimatedValue {
                            "_animation": null,
                            "_children": Array [],
                            "_listeners": Object {},
                            "_offset": 0,
                            "_value": 768,
                          },
                        },
                        Object {
                          "translateX": 0,
                        },
                      ],
                    },
                  ]
                }
              >
                <View>
                  <react-native-mock>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#fff",
                          "borderRadius": 4.517647058823529,
                          "justifyContent": "center",
                          "padding": 22.588235294117645,
                          "width": 338.8235294117647,
                        }
                      }
                    >
                      <react-native-mock>
                        <Text
                          style={
                            Object {
                              "color": "#000",
                              "fontSize": 45.17647058823529,
                              "marginBottom": 22.588235294117645,
                            }
                          }
                        >
                          <react-native-mock>
                            Letter Wheel
                          </react-native-mock>
                        </Text>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#555",
                              "height": 2.2588235294117647,
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock />
                        </View>
                        <TouchableOpacity
                          onPress={[Function]}
                          style={
                            Object {
                              "alignItems": "center",
                              "height": 67.76470588235294,
                              "justifyContent": "center",
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock>
                            <Text
                              style={
                                Object {
                                  "color": "#000",
                                  "fontSize": 22.588235294117645,
                                }
                              }
                            >
                              <react-native-mock>
                                New Game
                              </react-native-mock>
                            </Text>
                          </react-native-mock>
                        </TouchableOpacity>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#555",
                              "height": 2.2588235294117647,
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock />
                        </View>
                        <TouchableOpacity
                          onPress={[Function]}
                          style={
                            Object {
                              "alignItems": "center",
                              "height": 67.76470588235294,
                              "justifyContent": "center",
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock>
                            <Text
                              style={
                                Object {
                                  "color": "#000",
                                  "fontSize": 22.588235294117645,
                                }
                              }
                            >
                              <react-native-mock>
                                Score This Game
                              </react-native-mock>
                            </Text>
                          </react-native-mock>
                        </TouchableOpacity>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#555",
                              "height": 2.2588235294117647,
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock />
                        </View>
                        <TouchableOpacity
                          onPress={[MockFunction]}
                          style={
                            Object {
                              "alignItems": "center",
                              "height": 67.76470588235294,
                              "justifyContent": "center",
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock>
                            <Text
                              style={
                                Object {
                                  "color": "#000",
                                  "fontSize": 22.588235294117645,
                                }
                              }
                            >
                              <react-native-mock>
                                Instructions
                              </react-native-mock>
                            </Text>
                          </react-native-mock>
                        </TouchableOpacity>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#555",
                              "height": 2.2588235294117647,
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock />
                        </View>
                        <TouchableOpacity
                          onPress={[MockFunction]}
                          style={
                            Object {
                              "alignItems": "center",
                              "height": 67.76470588235294,
                              "justifyContent": "center",
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock>
                            <Text
                              style={
                                Object {
                                  "color": "#000",
                                  "fontSize": 22.588235294117645,
                                }
                              }
                            >
                              <react-native-mock>
                                About Letter Wheel
                              </react-native-mock>
                            </Text>
                          </react-native-mock>
                        </TouchableOpacity>
                        <View
                          style={
                            Object {
                              "backgroundColor": "#555",
                              "height": 2.2588235294117647,
                              "width": 316.2352941176471,
                            }
                          }
                        >
                          <react-native-mock />
                        </View>
                      </react-native-mock>
                    </View>
                  </react-native-mock>
                </View>
              </AnimatedComponent>
            </react-native-mock>
          </View>
        </react-native-mock>
      </View>
    </ModalBox>
  </MenuModal>
</inject-MenuModal-with-store>
`;
